# Agentic-rag

./: .env  app.py  hints.md  ingest.py  pyproject.toml  rag_chain.py
Notebooks/: poc-agentic-rag.ipynb
rag-from-sratch/: embeddings.hdf5  rag_from_scratch.ipynb
